src/naming/snapshots/bevy_state_plugin_generator__naming__tests__flatten_parse_node_enums@enum_root_a_b_up_c.snap
---
source: src/naming/tests.rs
expression: flatten_parse_node(node)
---
[
    NodeData {
        index: 0,
        parent: None,
        node_type: Enum,
        depth: 0,
        name: "Root",
    },
    NodeData {
        index: 1,
        parent: Some(
            0,
        ),
        node_type: Enum,
        depth: 1,
        name: "A",
    },
    NodeData {
        index: 2,
        parent: Some(
            0,
        ),
        node_type: Singleton,
        depth: 1,
        name: "C",
    },
    NodeData {
        index: 3,
        parent: Some(
            1,
        ),
        node_type: Singleton,
        depth: 2,
        name: "B",
    },
]
